# giswater_qgis_plugin

./: .flake8  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  BREAKING-CHANGES-GUIDE.md  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  __init__.py  controller.py  dml.sql  generic_map_tool.py  giswater.py  giswater.py.rej  global_vars.py  gw_fct_getfiltervaluesvdef.sql  gw_fct_getformfields.sql  gw_fct_getlist.sql  gw_fct_setarcfusion.sql  inventory_tables.txt  line_map_tool.py  load_project.py  main.py  metadata - copia.txt  metadata.txt  multi_row_selector_utils.py  parent_init.py  point_map_tool.py  project_check.py  pyproject.toml  requirements.txt  resources.qrc  resources_rc.py  ruff.toml  sys_manager.py  tree_manage.py  ud_arc_init.py  ud_connec_init.py  (+17 more)
actions/: CustomModel.py  ExtendedQLabel.py  HyperLinkLabel.py  add_layer.py  add_lot.py  api_catalog.py  api_cf.py  api_config.py  api_dimensioning.py  api_go2epa_options.py  api_manage_composer.py  api_move_node.py  api_parent.py  api_parent_functs.py  api_search.py  basic.py  catalog.py  check_project_result.py  create_gis_project.py  crm_trace.py  custom.py  delete_feature.py  duplicate_psector.py  ed.py  ed.py.rej  edit.py  edit_2.py  go2epa.py  gw_actions.py  gw_task.py  gw_thread.py  gw_toolbox.py  i18n_generator.py  info.py  manage_document.py  manage_element.py  manage_gallery.py  manage_new_psector.py  manage_visit.py  manage_workcat_end.py  (+29 more)
config/: config.sqlite  dev.config  giswater.config  init.config  ui_config.config  user.config  user_params.config  user_params_v2.config
(+11865 files in other folders)
